--- a/dateSelect.wxss
+++ b/dateSelect.wxss
@@ -1,4 +1,25 @@
 /* pages/dateSelect/dateSelect.wxss */
+page{
+  font-family: "Helvetica Neue", "Hiragino Sans GB", "Microsoft YaHei", "\9ED1\4F53", Arial, sans-serif;
+  color:#333;
+  font-size: 28rpx;
+  overflow-x: hidden; 
+  overflow-y: auto;
+}
+.layout-flex{
+    display:flex;
+}
+.layout-flex .row{
+    flex-direction: row;
+}
+.layout-flex .column{
+    flex-direction: column;
+}
+.align-center{
+    align-items:center;
+    justify-content: center;
+}
+
 .date-day{
     display: flex;
     margin:5px;
